deployment heroes methods && optimizations
